<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homepageFragment"
    android:background="@drawable/clouds_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.screens.HomepageFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:id="@+id/skyStarIcon"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="20dp"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        android:scaleType="fitCenter"
        android:src="@drawable/skystar_name_logo" />

    <Button
        android:id="@+id/btnDeparture"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:hint="@string/departures"
        android:textColorHint="@color/white"
        app:icon="@drawable/ic_baseline_flight_takeoff_24"
        app:iconTint="#ffffff"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnArrivals"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:hint="@string/arrivals"
        android:textColorHint="@color/white"
        app:icon="@drawable/ic_baseline_flight_land_24"
        app:iconTint="#ffffff"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnFavorites"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:hint="@string/favorites"
        android:textColorHint="@color/white"
        app:icon="@drawable/ic_baseline_star_border_24"
        app:iconTint="#ffffff"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:hint="@string/search"
        android:textColorHint="@color/white"
        app:icon="@drawable/ic_baseline_search_24"
        app:iconTint="#ffffff"
        android:textSize="20dp" />


</LinearLayout>