<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/natbagbackground"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screens.SearchFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textStyle="bold"

        android:layout_gravity="center"
        android:textSize="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departures"
            android:textStyle="bold"
            android:layout_marginEnd="7dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="30dp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchDeparturesArrivals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:checked="false"
            app:thumbTint="#03A9F4"
            app:trackTint="#9FD6EF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrivals"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="30dp" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <AutoCompleteTextView
            android:id="@+id/tilAirline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="textCapCharacters"
            android:hint="@string/airline"
            android:textSize="30dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/flight_number"
            android:gravity="center"
            android:layout_gravity="center"
            android:inputType="textCapCharacters"
            android:textSize="30dp"
            android:id="@+id/tilFlightNumber" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:gravity="center"
            android:layout_gravity="center"
            android:inputType="textCapCharacters"
            android:textSize="30dp"
            android:id="@+id/tilCityFlight" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dates"
            android:gravity="center"
            android:layout_gravity="center"
            android:inputType="none"
            android:clickable="true"
            android:cursorVisible="false"
            android:editable="false"
            android:textSize="30dp"
            android:id="@+id/tilDates" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/start"
                android:gravity="center"
                android:layout_gravity="center"
                android:inputType="none"
                android:clickable="true"
                android:cursorVisible="false"
                android:editable="false"
                android:textSize="20dp"
                android:id="@+id/tilStartTime" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/end"
                android:gravity="center"
                android:layout_gravity="center"
                android:inputType="none"
                android:clickable="true"
                android:cursorVisible="false"
                android:editable="false"
                android:textSize="20dp"
                android:id="@+id/tilEndTime" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>



    <Button
        android:id="@+id/btnSendSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="30dp"
        app:icon="@drawable/ic_baseline_search_24"
        app:strokeWidth="2dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/search" />


</LinearLayout>