<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    app:cardBackgroundColor="#5EFFFFFF"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivAirline"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="5sp"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:src="@drawable/generalairlien" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvFlightNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:text="@string/flight_number" />

            <TextView
                android:id="@+id/tvCountryCity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:text="@string/country_city"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvDateTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:text="@string/date_time"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvFlightStatus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:text="@string/flight_status"
                android:textSize="18dp"
                android:layout_marginStart="20sp"
                android:textStyle="bold"
                />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>