<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:cardBackgroundColor="#5EFFFFFF"
        app:cardCornerRadius="10dp"
        android:background="@color/white"
        app:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_gravity="fill_horizontal"
                >

                <ImageView
                    android:id="@+id/ivAirline"
                    android:layout_width="100sp"
                    android:layout_height="90sp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/generalairlien" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/ivCountry"
                    android:layout_width="100sp"
                    android:layout_height="90sp"
                    android:layout_marginStart="5sp"
                    android:layout_marginEnd="10dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="fill_horizontal"
                        >



                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">


                            <TextView
                                android:id="@+id/tvFlightNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="20dp"
                                android:textStyle="bold"
                                tools:text="@string/flight_number" />

                            <TextView
                                android:id="@+id/tvAirportName"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="2dp"
                                android:text="@string/airport_name"
                                android:textSize="18dp" />


                        </LinearLayout>


                        <Space
                            android:layout_width="1000sp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"/>


                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:id="@+id/ivFlightType"
                            android:layout_marginEnd="15sp"
                            tools:src="@drawable/common_google_signin_btn_icon_dark_normal"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvCountryCity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="2dp"
                        android:text="@string/country_city"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/tvAirline"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="2dp"
                        android:text="@string/airline"
                        android:textSize="18dp" />


                    <TextView
                        android:id="@+id/tvTimeToFlight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="2dp"
                        android:text="@string/scheduled_time"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/tvRealTimeToFlight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="2dp"
                        android:text="@string/estimated_time"
                        android:textSize="18dp" />



                    <TextView
                        android:id="@+id/tvFlightStatus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="7sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/flight_status"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>